created a class wrappper

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="./js.js"></script>
 </head>
 <body>
+    <div class="wrapper">
+       
+    </div>
+
     <script src="./js.js"></script>
 </body>
 </html>
