--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div class="wrapper">
+        <p id="joke"></p>
        
     </div>
-
+    
     <script src="./js.js"></script>
 </body>
 </html>
