--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <p id="joke"></p>
-       
+        <button id="btn">New Joke</button>
     </div>
     
     <script src="./js.js"></script>
