--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
+    <h1>Joke Generator</h1>
         <p id="joke"></p>
         <button id="btn">New Joke</button>
     </div>
