--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <button id="btn">New Joke</button>
     </div>
     
-    <script src="./js.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
