changed the name of the button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
     <h1><strong >Joke Generator</strong></h1>
         <p id="joke"></p>
-        <button id="btn">New Joke</button>
+        <button id="btn">Generate New Joke</button>
     </div>
     
     <script src="script.js"></script>
